fix credits height + overflow body

--- a/style.scss
+++ b/style.scss
@@ -1107,6 +1107,10 @@ footer {
 
 	#world {
 		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
 	}
 
 	.container {
